--- a/ImageSlider/example.html
+++ b/ImageSlider/example.html
@@ -12,7 +12,7 @@
             <div class="items">
                 <div class="item-wrapper">
                     <div class="image-wrapper">
-                        <img src="1.png" />
+                        <img src="https://picsum.photos/200/90" />
                     </div>
                     <div class="title-wrapper">
                         <span>Pokládka PVC podlahy</span>
@@ -20,7 +20,7 @@
                 </div>
                 <div class="item-wrapper">
                     <div class="image-wrapper">
-                        <img src="1.png" />
+                        <img src="https://picsum.photos/200/90" />
                     </div>
                     <div class="title-wrapper">
                         <span>Pokládka PVC podlahy</span>
@@ -28,7 +28,7 @@
                 </div>
                 <div class="item-wrapper">
                     <div class="image-wrapper">
-                        <img src="1.png" />
+                        <img src="https://picsum.photos/200/90" />
                     </div>
                     <div class="title-wrapper">
                         <span>Pokládka PVC podlahy</span>
