--- a/ImageSlider/example.html
+++ b/ImageSlider/example.html
@@ -4,6 +4,11 @@
     <meta charset="UTF-8">
     <title>Image Slider</title>
     <link rel="stylesheet" type="text/css" href="image-slider.css">
+    <style>
+        .slider-container {
+            width: 600px;
+        }
+    </style>
 </head>
 <body>
 <div class="slider-container">
