ImageSlider - fixed example

--- a/ImageSlider/example.html
+++ b/ImageSlider/example.html
@@ -17,7 +17,7 @@
             <div class="items">
                 <div class="item-wrapper">
                     <div class="image-wrapper">
-                        <img src="https://picsum.photos/200/90" />
+                        <img src="https://lorempixel.com/200/90" />
                     </div>
                     <div class="title-wrapper">
                         <span>Pokládka PVC podlahy</span>
@@ -25,7 +25,7 @@
                 </div>
                 <div class="item-wrapper">
                     <div class="image-wrapper">
-                        <img src="https://picsum.photos/200/90" />
+                        <img src="https://lorempixel.com/200/90" />
                     </div>
                     <div class="title-wrapper">
                         <span>Pokládka PVC podlahy</span>
@@ -33,7 +33,7 @@
                 </div>
                 <div class="item-wrapper">
                     <div class="image-wrapper">
-                        <img src="https://picsum.photos/200/90" />
+                        <img src="https://lorempixel.com/200/90" />
                     </div>
                     <div class="title-wrapper">
                         <span>Pokládka PVC podlahy</span>
@@ -52,6 +52,6 @@
         </div>
     </div>
 </div>
-<script src="image-slider.js" type="javascript"></script>
+<script src="image-slider.js"></script>
 </body>
 </html>
