TypedText - Added multi-text support

--- a/TypedText/example.html
+++ b/TypedText/example.html
@@ -6,9 +6,13 @@
     <link rel="stylesheet" type="text/css" href="typed-text.css">
 </head>
 <body>
-    <h2 class="typed-text" data-interval="1000" data-speed="100" data-erase-speed="20">This is an example of typed text</h2>
+    <h2 class="typed-text" data-interval="1000" data-speed="100" data-erase-speed="20">
+        <span>This is an example of typed text</span>
+        <span>2This is an example of typed text</span>
+        <span>3This is an example of typed text</span>
+    </h2>
     <h2 class="typed-text" data-interval="1000" data-speed="1000">This is an example of slowly typed text</h2>
-    <h2 class="typed-text" data-interval="1000" data-speed="50">This is an example of fast typed text</h2>
+    <h2 class="typed-text" data-interval="1000" data-speed="50" data-erase-speed="20">This is an example of fast typed text</h2>
     <script src="typed-text.js"></script>
 </body>
 </html>
