--- a/ImageSlider/example.html
+++ b/ImageSlider/example.html
@@ -8,6 +8,27 @@
         .slider-container {
             width: 600px;
         }
+
+        div.gallery {
+            margin: 5px;
+            border: 1px solid #ccc;
+            float: left;
+            width: 180px;
+        }
+
+        div.gallery:hover {
+            border: 1px solid #777;
+        }
+
+        div.gallery img {
+            width: 100%;
+            height: auto;
+        }
+
+        div.desc {
+            padding: 15px;
+            text-align: center;
+        }
     </style>
 </head>
 <body>
@@ -42,6 +63,24 @@
             </div>
             <div class="texts">
                 <div class="text-wrapper">
+                    <div class="gallery">
+                        <a target="_blank" href="img_5terre.jpg">
+                            <img src="https://lorempixel.com/200/90" />
+                        </a>
+                        <div class="desc">Add a description of the image here</div>
+                    </div>
+                    <div class="gallery">
+                        <a target="_blank" href="img_5terre.jpg">
+                            <img src="https://lorempixel.com/200/90" />
+                        </a>
+                        <div class="desc">Add a description of the image here</div>
+                    </div>
+                    <div class="gallery">
+                        <a target="_blank" href="img_5terre.jpg">
+                            <img src="https://lorempixel.com/200/90" />
+                        </a>
+                        <div class="desc">Add a description of the image here</div>
+                    </div>
                     Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Nullam sapien sem, ornare ac, nonummy non, lobortis a enim. Aliquam id dolor. Integer rutrum, orci vestibulum ullamcorper ultricies, lacus quam ultricies odio, vitae placerat pede sem sit amet enim. Phasellus rhoncus. Curabitur sagittis hendrerit ante. Morbi leo mi, nonummy eget tristique non, rhoncus non leo. Suspendisse sagittis ultrices augue. Pellentesque pretium lectus id turpis. Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Vivamus porttitor turpis ac leo. In convallis.
                 </div>
                 <div class="text-wrapper">
