ImageSlider - added height to parent element

--- a/ImageSlider/example.html
+++ b/ImageSlider/example.html
@@ -61,8 +61,8 @@
                     </div>
                 </div>
             </div>
-            <div class="texts">
-                <div class="text-wrapper">
+            <div class="contents">
+                <div class="content-wrapper">
                     <div class="gallery">
                         <a target="_blank" href="img_5terre.jpg">
                             <img src="https://lorempixel.com/200/90" />
@@ -83,9 +83,9 @@
                     </div>
                     Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Nullam sapien sem, ornare ac, nonummy non, lobortis a enim. Aliquam id dolor. Integer rutrum, orci vestibulum ullamcorper ultricies, lacus quam ultricies odio, vitae placerat pede sem sit amet enim. Phasellus rhoncus. Curabitur sagittis hendrerit ante. Morbi leo mi, nonummy eget tristique non, rhoncus non leo. Suspendisse sagittis ultrices augue. Pellentesque pretium lectus id turpis. Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Vivamus porttitor turpis ac leo. In convallis.
                 </div>
-                <div class="text-wrapper">
+                <div class="content-wrapper">
                     Morbi scelerisque luctus velit. Fusce wisi. Quisque tincidunt scelerisque libero. Etiam bibendum elit eget erat. Suspendisse sagittis ultrices augue. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Proin pede metus, vulputate nec, fermentum fringilla, vehicula vitae, justo. In enim a arcu imperdiet malesuada. Fusce nibh. Integer tempor. Quisque porta. Nullam at arcu a est sollicitudin euismod. Duis ante orci, molestie vitae vehicula venenatis, tincidunt ac pede. Duis viverra diam non justo. Vivamus porttitor turpis ac leo. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. In rutrum. Sed vel lectus. Donec odio tempus molestie, porttitor ut, iaculis quis, sem.                </div>
-                <div class="text-wrapper">
+                <div class="content-wrapper">
                     Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Mauris elementum mauris vitae tortor. Sed elit dui, pellentesque a, faucibus vel, interdum nec, diam. Nulla accumsan, elit sit amet varius semper, nulla mauris mollis quam, tempor suscipit diam nulla vel leo. Praesent id justo in neque elementum ultrices. Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur? Praesent dapibus. Cras pede libero, dapibus nec, pretium sit amet, tempor quis. Integer malesuada. In laoreet, magna id viverra tincidunt, sem odio bibendum justo, vel imperdiet sapien wisi sed libero.                </div>
             </div>
         </div>
